--- a/style.css
+++ b/style.css
@@ -91,20 +91,22 @@ a:active {
   margin-right: 5px;
 }
 
-
 /* Modal */
 .modal-container {
   background: rgba(0,0,0,0.6);
+  display: none;
   position: fixed;
   top:0;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+.show-modal {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 
 .modal {
   background: white;
